rewrite on golang

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,10 @@
-DATABASE_URL="postgresql://user:password@localhost:5432/anime_schedule?schema=public"
-BOT_TOKEN="0000000000:AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+POSTGRES_HOST=localhost
+POSTGRES_USER=username
+POSTGRES_PASSWORD=your_password
+POSTGRES_DB_NAME=anime_schedule
+POSTGRES_PORT=5432
+
+POSTGRES_SSL_MODE=disable
+POSTGRES_TIMEZONE=Europe/Moscow
+  
+TELEGRAM_BOT_TOKEN="0000000000:AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
